# gard

./: Dockerfile  LICENSE  README.md  pyproject.toml  scrape.sh
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yml
gard/: __init__.py  diseases.trimmed.json
test/: test_gard.py
